--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </ul>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+    <script src="js/gradiAuthors.js"></script>
     <script src="js/grid.js"></script>
     <script src="js/renderGridItems.js"></script>
   </body>
